--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "webpack:production": "cross-env NODE_ENV=production webpack && npm run uglify:analytics",
     "webpack": "webpack && npm run uglify:analytics",
-    "uglify:analytics": "uglifyjs src/analytics-v1.js -o build/bundle/analytics-v1.js"
+    "uglify:analytics": "uglifyjs src/analytics.js -o build/bundle/analytics.js"
   },
   "repository": {
     "type": "git",
