--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "@shopgate/eslint-config"
+  "extends": "@shopgate/eslint-config",
+  "rules": {
+    "eslint-comments/no-use": "allow"
+  }
 }
