BIGC-628: added testing frameworks to dependencies, added scripts for testing, linting and dependency checks.

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
   "extends": "@shopgate/eslint-config",
   "rules": {
     "eslint-comments/no-use": "allow"
+  },
+  "env": {
+    "mocha": true
   }
 }
