BIGC-628: refactored naming of module functions and the files - removed shopgate as a prefix. Added an integration test and refactored code to new class ShopgateAppCodeExecutor.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "@shopgate/eslint-config",
   "rules": {
-    "eslint-comments/no-use": "allow"
+    "eslint-comments/no-use": "allow",
+    "class-methods-use-this": "off"
   },
   "env": {
     "mocha": true
