--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint-staged": "^6.1.0",
     "mocha": "^5.0.0",
     "nsp": "^3.1.0",
+    "sinon": "^4.2.2",
     "uglify-js": "^3.3.8",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0"
