BIGC-628: fixed 'this' scope issue in cornerstone theme files. Added package transform-class-properties and @types for chai and sinon.

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
-  "presets": ["env"],
-  "plugins": ["dynamic-import-node"],
+  "presets": [
+    "env"
+  ],
+  "plugins": [
+    "dynamic-import-node",
+    "transform-class-properties"
+  ],
   "env": {
     "test": {
       "presets": [
