--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "dependencies": {},
   "devDependencies": {
     "@shopgate/eslint-config": "^1.0.3",
+    "@types/chai": "^4.1.2",
+    "@types/sinon": "^4.1.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
