--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@shopgate/eslint-config": "^1.0.3",
     "@types/chai": "^4.1.2",
+    "@types/jsdom": "^11.0.4",
     "@types/sinon": "^4.1.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
