--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopgate/bigcommerce-js",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "This repository contains all JavaScripts for the Shopgate Connect BigCommerce Extension",
   "scripts": {
     "precommit": "lint-staged && npm run test",
@@ -45,5 +45,11 @@
     "uglify-js": "^3.3.23",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^3.11.0"
+  },
+  "peerDependencies": {
+    "@shopgate/theme-gmd": "^5.3.0",
+    "@shopgate/theme-ios11": "^5.3.0",
+    "@shopgate/bigcommerce-user": "^0.3.0",
+    "@shopgate/bigcommerce-cart": "^0.2.0"
   }
 }
